# workshop-cmake-examples

1.hello-world/: CMakeLists.txt
2.hello-library/: CMakeLists.txt
2.hello-library/example/: CMakeLists.txt  main.cpp
2.hello-library/include/HelloLibrary/: hello.h
2.hello-library/src/: hello.cpp
3.hello-library-dll/: CMakeLists.txt  bootstrap_msvc.sh
3.hello-library-dll/example/: CMakeLists.txt
3.hello-library-dll/src/: hello.cpp
4.cmake-modules/: bootstrap_clang_tidy.sh
4.find-script/: CMakeLists.txt  bootstrap_msvc.sh
4.find-script/cmake/: FindHelloLibrary.cmake
4.find-script/dep/HelloLibrary/: CMakeLists.txt
4.find-script/dep/HelloLibrary/HelloLibrary/: CMakeLists.txt
4.find-script/dep/HelloLibrary/HelloLibrary/src/: hello.cpp
4.find-script/dep/HelloLibraryPackage/include/HelloLibraryDll/: HelloLibraryDll_export.h
4.find-script/dep/HelloLibraryPackage/lib/: HelloLibraryDll.lib  HelloLibraryDlld.lib
4.find-script/src/: CMakeLists.txt
5.cmake-modules/: CMakeLists.txt  bootstrap_msvc.sh  bootstrap_ninja.sh
5.cmake-modules/cmake/: RunClangTidy.cmake
5.cmake-modules/example/: main.cpp
5.cmake-modules/include/HelloLibraryDll/: hello.h
